--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@vue/test-utils": "^2.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "style-resources-loader": "^1.3.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-jest": "^5.0.0-0"
   }
 }
