--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --watch",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -25,6 +26,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "lodash-es": "^4.17.20",
     "style-resources-loader": "^1.3.2",
     "typescript": "~3.9.3",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
