--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "swiper": "^6.4.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -27,6 +28,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lodash-es": "^4.17.20",
+    "sass-loader": "^10.1.1",
     "style-resources-loader": "^1.3.2",
     "typescript": "~3.9.3",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
